--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Hello, world!</h1>
-    <h2>Git! welcome!</h2>
-    <h3>ipad cording is very exciting!</h3>
+    <h2>Git! welcome!!</h2>
+    <h3>ipad cording is very exciting!!!</h3>
 </body>
 </html>
